app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

 body {
     margin: 0;
     height: 100%;
 }

 html {
    height: 100%;
 }
.nav_bar_container {
    display: flex;
    border: 20px;
    justify-content: center;
    height: 12.5%;
    background-color: skyblue;
    color: black;
    border-bottom: solid;
}

.nav_bar_items {
    min-width: 33%;
    height: 100%;
}

.top_nav_bar_items {
    width: 100%;
    height: 100%;
}

.flight_search_nav_container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 75%;
    background-color: whitesmoke;
    color: black;
}

.flight_search_box {
    height: 60%;
    border: aqua solid;
    width: 300px;
    border-style: ridge;
}

.flight_search_result_box {
    height: 100%;
    min-width: 31%;
    margin-left: 5px;
}
.child {
    border-bottom: 10px;
    margin-bottom: 10px;
}

.no_flights_found {
    border: solid;
    border-color: aqua;
}

.footer_nav_bar {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    height: 115px;
    width: 100%;
    border-top: solid black;
    background-color: skyblue;
}

.booking_forms {
    width: 35%;
    margin-left: 35%;
}

.booking_form_header{
    margin-top: 5px;
    width: 100%;
    margin-left: 5px;
    margin-bottom: 10px;
}

.booking_form_information {
    width: 200px;
    margin-left: 0%;
    margin-bottom: 10px;
}

.booking_submit_button {
    margin-top: 10px;
}

.booking_information {
    margin-left: 5px;
}

.dropdown_options {
    display: contents;
}

